# ops-nn

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  QUICKSTART.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  codearts_check_rule_config.md  install_deps.sh  requirements.txt  version.cmake  version.info
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
activation/softplus_v2_grad/tests/ut/op_host/: CMakeLists.txt  test_aclnn_softplus_backward.cpp  test_softplus_v2_grad_infershape.cpp
activation/softplus_v2_grad/tests/ut/op_host/arch35/: test_softplus_v2_grad_tiling.cpp
activation/softplus_v2_grad/tests/ut/op_host/op_api/: CMakeLists.txt  test_aclnn_softplus_backward.cpp
cmake/: aclnn_ops_nn.h.in  custom_kernel.cmake  dependencies.cmake  fetch_cann_cmake.cmake  func.cmake  gen_ops_info.cmake  intf_pub_linux.cmake  intf_pub_llt_gccnative.cmake  makeself_built_in.cmake  makeself_custom.cmake  opbuild.cmake  package.cmake  runtimeKB.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake  version.cmake
common/: CMakeLists.txt
common/stub/op_api/: CMakeLists.txt  op_api_stub.cpp
common/stub/op_api/aclnn_kernels/: cast.h  contiguous.h  pad.h  reshape.h  slice.h  transdata.h  transpose.h
common/stub/op_api/aclnn_kernels/common/: op_error_check.h
common/stub/op_api/level0/: abs.h  adaptive_avg_pool2d_assist_matrix.h  add.h  adjacent_difference.h  arange.h  avgpool_update.h  avgpool_v2.h  axpy.h  batch_matmul_v2tov3.h  batch_norm_backward.h  broadcast_to.h  concat.h  cumsum.h  dilation.h  div.h  dot.h  dsa_random_uniform.h  equal.h  expand.h  fault_injection.h  fill.h  gather_elements.h  gather_v2.h  gather_v3.h  greater.h  index_put.h  index_put_with_sort.h  index_put_with_sort_v2.h  inplace_index_add.h  kth_value.h  less.h  log.h  logical_and.h  logical_or.h  lp_norm_reduce_v2.h  lp_norm_update_v2.h  masked_fill.h  matmul_v2tov3.h  max_pool3d_grad_with_argmax.h  max_pool3d_with_argmax_v2.h  (+40 more)
conv/conv3d_backprop_input_v2/tests/ut/op_kernel/: CMakeLists.txt  conv3d_backprop_input_v2_tiling_def.h  test_conv3d_backprop_input_v2.cpp
conv/conv3d_backprop_input_v2/tests/ut/op_kernel/conv3d_backprop_input_v2_data/: gen_data.py  gen_tiling.py
docs/: CONTRIBUTING_DOCS.md  QUICKSTART.md  README.md  (+2 more)
examples/fast_kernel_launch_example/ascend_ops/csrc/conv3d_custom/: CMakeLists.txt  conv3d_custom_torch.cpp
examples/fast_kernel_launch_example/ascend_ops/csrc/conv3d_custom/test/: test_conv3d_custom.py
experimental/matmul/matmul_fp32/examples/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
experimental/matmul/tilelet_matmul_fp32/examples/src/: CMakeLists.txt  main.cpp  main_crosscard.cpp  main_crosscard_mp.cpp  op_runner.cpp  operator_desc.cpp  tilelet_static_resource_stub.cpp
experimental/matmul/weight_quant_batch_matmul_experiment/examples/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
experimental/optim/apply_adam_d/examples/: CMakeLists.txt  run.sh  test_aclnn_apply_adam_d.cpp  test_geir_apply_adam_d.cpp  test_kernel_direct_apply_adam_d.asc
experimental/optim/apply_adam_d/tests/ut/: CMakeLists.txt  gen_report.py  run.sh
experimental/optim/apply_adam_d/tests/ut/common/: infershape_case_executor.cpp  infershape_context_faker.cpp  tiling_case_executor.cpp  tiling_case_executor.h  tiling_context_faker.cpp  tiling_context_faker.h
experimental/optim/apply_adam_d/tests/ut/op_host/: CMakeLists.txt  test_apply_adam_d_infershape.cpp  test_apply_adam_d_tiling.cpp  test_op_host_main.cpp
experimental/optim/apply_ftrl/examples/: CMakeLists.txt  run.sh  test_geir_apply_ftrl.cpp  test_kernel_direct_apply_ftrl.asc
experimental/optim/apply_ftrl/tests/ut/: CMakeLists.txt  run.sh
experimental/optim/apply_ftrl/tests/ut/cmake/: BuildGoogleTest.cmake
experimental/optim/apply_ftrl/tests/ut/common/: infershape_case_executor.h  tiling_context_faker.h
experimental/optim/apply_ftrl/tests/ut/op_host/: CMakeLists.txt  test_apply_ftrl_infershape.cpp  test_apply_ftrl_tiling.cpp  test_op_host_main.cpp
experimental/optim/apply_ftrl/tests/ut/op_kernel/: CMakeLists.txt  test_apply_ftrl.cpp
experimental/optim/apply_rms_prop/tests/ut/: CMakeLists.txt  run.sh
experimental/optim/apply_rms_prop/tests/ut/common/: any_value.h  infershape_context_faker.h  tiling_case_executor.cpp  tiling_case_executor.h  tiling_context_faker.cpp
experimental/optim/apply_rms_prop/tests/ut/op_host/: CMakeLists.txt  test_apply_rms_prop_infershape.cpp  test_apply_rms_prop_tiling.cpp  test_op_host_main.cpp
loss/cross_entropy_loss_grad/tests/ut/op_kernel/: CMakeLists.txt  cross_entropy_loss_grad_tiling.h  cross_entropy_loss_grad_tiling_def.h  test_cross_entropy_loss_grad.cpp  test_cross_entropy_loss_grad_apt.cpp
loss/cross_entropy_loss_grad/tests/ut/op_kernel/cross_entropy_loss_grad_data/: gen_data.py  verify.py
matmul/quant_batch_matmul_v3/tests/ut/op_kernel/: CMakeLists.txt  quant_batch_matmul_v3_tiling_def.h  test_quant_batch_matmul_v3.cpp  test_quant_batch_matmul_v3.csv  test_quant_batch_matmul_v3_utils.h
matmul/quant_batch_matmul_v3/tests/ut/op_kernel/arch35/: test_quant_batch_matmul_v3_apt_bf16.cpp  test_quant_batch_matmul_v3_apt_int8.cpp
matmul/quant_batch_matmul_v4/tests/ut/op_kernel/: CMakeLists.txt  quant_batch_matmul_v4_tiling.h  quant_batch_matmul_v4_tiling_def.h  test_quant_batch_matmul_v4.cpp
matmul/quant_batch_matmul_v4/tests/ut/op_kernel/quant_batch_matmul_v4_data/: gen_data.py
matmul/quant_matmul_reduce_sum/tests/ut/op_kernel/: CMakeLists.txt  quant_matmul_reduce_sum_tiling_def.h  test_quant_matmul_reduce_sum.cpp
tests/ut/op_host/: CMakeLists.txt  test_op_host_main.cpp
tests/ut/op_kernel/: CMakeLists.txt  data_utils.cpp  data_utils.h  kernel_ut_data_executor.cpp  kernel_ut_data_executor.h  kernel_ut_data_helper.cpp  kernel_ut_data_helper.h  kernel_ut_log.h  test_op_kernel_main.cpp
tests/ut/op_kernel/scripts/: gen_tiling_head_file.py  gen_tiling_head_file.sh
(+17751 files in other folders)
